# demiurge

./: CHANGELOG.md  Cargo.toml  README.md  TODOs.md  dist-workspace.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  publish.yml  release-plz.yml  test.yml
.woodpecker/: docs.yaml  release-plz.yaml  release.yaml  test.yaml
docs/: book.toml  index.html
docs/src/: SUMMARY.md  commands.md  configuration.md  implementation.md  installation.md
examples/: demiurge.pyi  example_1.py
src/: changes.rs  cli.rs  config.rs  engine.rs  lib.rs  logging.rs  main.rs  utils.rs
src/changes/: dotfile.rs  outcome.rs  package.rs  service.rs  system.rs  user.rs
src/cli/: apply.rs  eval.rs  init.rs  schema.rs  status.rs
src/config/: demiurge_config.rs  dotfile.rs  packages.rs  service.rs  system.rs  user.rs
src/initial_files/: index.d.ts  index.ts
src/py-lib/: demiurge.py  state.py
src/py-lib/dsl/: packages.py  system.py
