[package]
name = "demigurge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitcode = { version = "0.6.9", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
colog = "1.4.0"
directories = "6.0.0"
duct = "1.1.1"
log = "0.4.29"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
serde = { version = "1.0.228", features = ["derive"] }
sudo = "0.6.0"
