[package]
name = "demiurge"
version = "0.1.0"
edition = "2024"
description = "Experimental declarative configuration for Arch Linux using Typescript"
authors = ["Jorge Mayoral Álvarez <contact@yorch.dev>"]

[[bin]]
name = "dmrg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
bitcode = { version = "0.6.9", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
colog = "1.4.0"
directories = "6.0.0"
duct = "1.1.1"
inquire = "0.9.3"
log = "0.4.29"
owo-colors = "4.2.3"
rustyscript = { version = "0.12.3", features = ["fs_import"] }
schemars = "1.2.1"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.143"
serde_norway = "0.9.42"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "deny"
